Some changes in logo , hover color, bg-primary

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -49,12 +49,12 @@ Template Name: Reves - Multipurpose Business HTML Template
 1. Global Css
 =================================================*/
  
-$primary-color: #17181A;
+$primary-color: #2D2926;
 $text-color:#9da1a5;
 $text-color-dark:#555555;
 $border-color: #2d2d2d;
 $white: #ffffff;
-$hover-color: #cf2435;
+$hover-color: #A4DE02;
 $body-bg :#020b0d;
 $text-color-light:#C8C8C8;
 $heading-text-color: #e6e6e6;
