--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1182,7 +1182,7 @@ header .header-logo {
 
 .nav-right-area {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 .nav-right-area .header-button {
